<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Теплица</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="birth_day">Дата рождения</string>
    <string name="country">Страна</string>
    <string name="submit">Отправить</string>
    <string name="email">Почта</string>
    <string name="email_example" translatable="false">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="password_context">(не меньше восьми символов)</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password_example" translatable="false">1234567</string>
    <string name="register">Зарегистрироваться</string>
    <string name="back">Назад</string>
    <string name="welcome_to_sign_up">Регистрация</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="not_account">Нет аккаунта</string>
    <string name="login">Войти</string>
    <string name="forgot_username">Забыл пароль</string>
    <string name="app_title" translatable="false">My Greenhouse</string>
    <string name="response">Такая почта уже зарегистрирована или некорректна</string>
    <string name="restore_title">Войти в свой аккаунт</string>
    <string name="restore_description">Пройдите по ссылке в письме для восстановления пароля</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="window_open">Форточка\nоткрыта</string>
    <string name="window_closed">Форточка\nзакрыта</string>
    <string name="humidifier_on">Увлажнение\nвкл</string>
    <string name="humidifier_off">Увлажнение\nвыкл</string>
    <string name="watering_on">Полив вкл</string>
    <string name="watering_off">Полив выкл</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="extreme_control_mode">Режим экстренного управления</string>
    <string name="temperature_celsius" translatable="false">%s°C</string>
    <string name="temperature_fahrenheit" translatable="false">%s°F</string>
    <string name="percent_adder" translatable="false">%s%%</string>
    <string name="general">Общее</string>
    <string name="app_language">Язык приложения:</string>
    <string name="temperature_units">Единицы температуры:</string>
    <string name="ru" translatable="false">RU</string>
    <string name="en" translatable="false">EN</string>
    <string name="celcius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>
    <string name="interval">Интервал снятия показаний</string>
    <string name="seconds10">10 секунд</string>
    <string name="minute1">1 минута</string>
    <string name="minutes2">2 минуты</string>
    <string name="protection_params">Защитные показатели</string>
    <string name="threshold_temperature">Температура, начиная с которой, можно открыть окно</string>
    <string name="greenhouse_overhumidification_protection">Влажность, при которой блокируется увлажнитель</string>
    <string name="furrow_overhumidification_protection">Влажность, при которой отключается полив бороздки</string>
    <string name="extreme_mode_off">Режим экстренного управления\n(ВЫКЛ)</string>
    <string name="extreme_mode_on">Режим экстренного управления\n(ВКЛ)</string>
    <string name="apply_and_save">Применить и сохранить</string>
    <string name="greenhouse_control">Управление теплицей</string>
    <string name="choice_a_time">ВЫБОР ВРЕМЕНИ\n(ПО ЧАСАМ)</string>
    <string name="choice_a_date">ВЫБОР ДАТЫ</string>
    <string name="soil_moisture">Влажность почвы</string>
    <string name="zero" translatable="false">0</string>
    <string name="temperature_and_humidity">Температура и влажность</string>
    <string name="temperature">Температура</string>
    <string name="humidity">Влажность</string>
    <string name="choice_soil_hum">Показатель влажности почвы, для грядки с номером</string>
    <string name="choice">Выберите грядку</string>
    <string name="choice_temp">Показатель температуры теплицы с номером</string>
    <string name="choice_hum">Показатель влажности теплицы с номером</string>
    <string name="furrow_disabled_message">Слишком высокая влажность. Невозможно включить полив</string>
    <string name="window_disabled_message">Слишком низкая температура. Окно открыть невозможно</string>
    <string name="humidifier_disabled_message">Слишком высокая влажность. Включить увлажнитель не получиться</string>
    <string name="automation_params">Параметры автоматизации</string>
    <string name="auto_open_window_message">Автоматически открывать окно при температуре</string>
    <string name="auto_open_sprinkler_message">Автоматически включать полив бороздки по достижению влажности</string>
    <string name="auto_turnon_humidifier_message">Автоматически включать увлажнение теплицы при влажности</string>
    <string name="automation_checkbox">Разрешить автоматическое включение систем</string>
    <string name="user_data">Данные пользователя</string>
    <string name="logout">Выйти</string>
    <string name="protection_annotation">*Недоступные кнопки помечаются серым цветом. Серый цвет значит, что система отключена</string>
    <string name="current_user">Текущий пользователь:\n%s</string>
    <string name="invalid_email_format">Формат почты не соблюдён</string>
    <string name="invalid_password_format">Пароль меньше 8 символов</string>
    <string name="login_success">Вход выполнен</string>
    <string name="invalid_credentials">Пароль или почта не верны</string>
    <string name="email_not_found">Пользователя с данной почтой не существует или он отключен.</string>
    <string name="unexpected_error">Возникла непредвиденная ошибка. Свяжитесь с разработчиками</string>
    <string name="settings_changed_after_restart_message">Изменения вступят в силу после перезагрузки приложения</string>
    <string name="agreed">Понятно</string>
    <string name="extreme_mode_warning_message">Во время экстренного режима автоматика и защита будут отключены, позволяя вам вручную задавать статус всех систем. Не рекомендуется включать этот режим при стабильной работе системы. Вы уверены что хотите продолжить?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="temperature_hint_text"> *Независимо от того, используете ли вы Цельсий или Фаренгейт, приложение смотрит только на числовое значение температуры</string>
</resources>