<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gray_rect"
    tools:context=".SignUpPage">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_page"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_gray_rect"
        android:orientation="vertical"
        android:paddingHorizontal="15pt"
        android:paddingTop="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#A1887F"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:translationZ="1dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_for_text"
            android:hint="@string/email_example"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="4dp"
            android:textColor="#A1887F"
            android:textColorHint="#D6C9C4"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/error_email_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#A1887F"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:rotation="0"
            android:rotationX="0"
            android:text="@string/password"
            android:textColor="#A1887F"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:allowUndo="false"
            android:background="@drawable/background_for_text"
            android:hint="@string/password_example"
            android:inputType="textPassword"
            android:paddingLeft="4dp"
            android:singleLine="false"
            android:textColor="#A1887F"
            android:textColorHint="#D6C9C4"
            android:textIsSelectable="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/error_password_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#A1887F"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:rotation="0"
            android:rotationX="0"
            android:text="@string/repeat_password"
            android:textColor="#A1887F"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/repeated_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:allowUndo="false"
            android:background="@drawable/background_for_text"
            android:hint="@string/password_example"
            android:inputType="textPassword"
            android:paddingLeft="4dp"
            android:singleLine="false"
            android:textColor="#A1887F"
            android:textColorHint="#D6C9C4"
            android:textIsSelectable="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/error_repeat_password_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#A1887F"
            android:visibility="gone" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/background_gray_rect"
            android:padding="5dp"
            android:text="@string/remember_me"
            android:textColor="#A1887F"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_button_shape"
            android:padding="15dp"
            android:text="@string/register" />


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

</androidx.constraintlayout.widget.ConstraintLayout>